tests/neg/i12432.scala

case class i1 ( i1 : annotation ) // error // error
class i2 ( a : scala.annotation ) // error

